[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/game/game.gd" type="Script" id=1]
[ext_resource path="res://scenes/game/scoreCounter.gd" type="Script" id=2]
[ext_resource path="res://scenes/game/assets/enemy/enemySpawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/game/assets/starSpawner.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/game/assets/ship/ship.tscn" type="PackedScene" id=5]

[sub_resource type="SegmentShape2D" id=1]

custom_solver_bias = 0.0
a = Vector2( 0, 0 )
b = Vector2( 0, 800 )

[sub_resource type="SegmentShape2D" id=2]

custom_solver_bias = 0.0
a = Vector2( 600, 0 )
b = Vector2( 600, 800 )

[node name="game" type="Node2D" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="scoreCounter" type="Label" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 2 )

[node name="enemySpawner" parent="." index="1" instance=ExtResource( 3 )]

ship = NodePath("../ship")

[node name="starSpawner" parent="." index="2" instance=ExtResource( 4 )]

_sections_unfolded = [ "Transform" ]
spawnDelay = Vector2( 0.01, 0.01 )
spawnColorRange = Vector2( 0.8, 1 )
starBaseSize = Vector2( 5, 10 )
starSpeedRange = Vector2( 10, 20 )

[node name="ship" parent="." index="3" instance=ExtResource( 5 )]

position = Vector2( 238.16, 666.245 )
scale = Vector2( 2, 2 )
_sections_unfolded = [ "Transform" ]

[node name="borderLeft" type="StaticBody2D" parent="." index="4"]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="borderLeftCollider" type="CollisionShape2D" parent="borderLeft" index="0"]

shape = SubResource( 1 )

[node name="borderRight" type="StaticBody2D" parent="." index="5"]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Transform" ]

[node name="borderRightCollider" type="CollisionShape2D" parent="borderRight" index="0"]

shape = SubResource( 2 )


